# rga-etl

./: .bumpversion.cfg  .env  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.py  docker-compose.yml  ingest_rga.py  pyproject.toml  rga_demo.py
PLC/: README.md  RGA.dmd  XTRACT.dmd
PLC/SimTest/: SimTest.dlo  SimTest.dmd  SimTest.wsp  SimTest_EXPORT_CMORE.csv  SimTest_EXPORT_DMD.txt
grafana/: grafana.ini
grafana/provisioning/dashboards/: AnalogScan.json  PLCReset.json  PvsTScan.json  RGAControl.json  dashboards.yml
grafana/provisioning/datasources/: datasources.yml
mqtt_bridge/: Dockerfile  mqtt_bridge.py
pc_plc/: Dockerfile
rga_etl/: fake.py  mysql.py  rga.py  utils.py
rga_etl/databases/: mysql.py  utils.py
rga_etl/pc/: fake.py  rga.py
rga_etl/pc/scripts/: rga_analog_scan.py  rga_p_vs_t_scan.py  rga_test.py
rga_etl/pc_plc/: mqtt_bridge.py  mqtt_runner.py  post_command.py
rga_etl/pc_plc/http_handlers/: analog_scan.py  arbitrary_command.py  plc_reset.py  pvs_t_scan.py  rga_analog_scan.py  rga_arbitrary_command.py  rga_p_vs_t_scan.py  rga_single_mass_scan.py  shared.py  single_mass_scan.py
rga_etl/pc_plc/scripts/: rga_single_mass_scan.py
rga_etl/scripts/: rga_analog_scan.py  rga_p_vs_t_scan.py  rga_single_mass_scan.py  rga_test.py
xtract_monitor/: .gitignore  docker-compose.yml  start_monitor.bat
xtract_monitor/dashboard/: xtract_monitor.html
xtract_monitor/mosquitto/data/: mosquitto.db
xtract_monitor/python/: Dockerfile  subscriber.py
