[tool.poetry]
name = "rga_etl"
version = "0.0.0"
description = "Extract, transform, and load the data from an SRS RGA200"
authors = [
  "Dacheng Xu, <dx2227@columbia.edu>",
]
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",
]
repository = "https://github.com/dachengx/rga-etl"

[tool.poetry.scripts]
rga_test = "rga_etl.pc.scripts.rga_test:main"
rga_analog_scan = "rga_etl.pc.scripts.rga_analog_scan:main"
rga_p_vs_t_scan = "rga_etl.pc.scripts.rga_p_vs_t_scan:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
"srsinst.rga" = {git = "https://github.com/thinkSRS/srsinst.rga.git", rev = "d02992b68e527aabeea0a8e2f5486bdc4589f438"}
sqlalchemy = "2.0.44"
mysql-connector-python = "9.5.0"
python-dotenv = "1.1.0"
matplotlib = "3.10.7"
paho-mqtt = "2.1.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
preview = true

[tool.mypy]
disable_error_code = [
    "attr-defined",
    "name-defined",
    "union-attr",
]

[tool.docformatter]
recursive = true
in-place = true
style = "google"
wrap-summaries = 100
wrap-descriptions = 100
blank = true
